# libssq

./: .gitignore  CMakeLists.txt  README.md
example/: example.c
include/ssq/: error.h  packet.h  ssq.h  utils.h
src/: buffer.c  packet.c  query.c
src/a2s/: info.c  player.c  rules.c
